{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 11,
  "lineage": "f8eafa8a-2523-486b-2c42-089fadb733fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:098829378826:internet-gateway/igw-0ed10a179a2de2596",
            "id": "igw-0ed10a179a2de2596",
            "owner_id": "098829378826",
            "tags": {
              "Creator": "Stefan Papp",
              "Date_Created": "n/a",
              "Department": "Engineering",
              "Name": "terraformtest-igw",
              "Purpose": "terraformtest-k8s"
            },
            "vpc_id": "vpc-00f9776004de3f728"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a243d5ff6419d55a",
            "owner_id": "098829378826",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed10a179a2de2596",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-00f9776004de3f728"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "snt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df54f583b6f3dbbb",
            "route_table_id": "rtb-0a243d5ff6419d55a",
            "subnet_id": "subnet-0eccbcaee49eed115"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.main",
            "aws_subnet.subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "snt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7112ad6da4063e1",
            "route_table_id": "rtb-0a243d5ff6419d55a",
            "subnet_id": "subnet-060d00b871d3ed178"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.main",
            "aws_subnet.subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "snt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea29e7cccdcd3a8",
            "route_table_id": "rtb-0a243d5ff6419d55a",
            "subnet_id": "subnet-044fbadcca46b938e"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.main",
            "aws_subnet.subnet3",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:098829378826:security-group/sg-098d12e01ae945720",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098d12e01ae945720",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20201128144045054400000001",
            "name_prefix": "",
            "owner_id": "098829378826",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f9776004de3f728"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:098829378826:subnet/subnet-0eccbcaee49eed115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0eccbcaee49eed115",
            "map_public_ip_on_launch": false,
            "owner_id": "098829378826",
            "tags": {
              "Creator": "Stefan Papp",
              "Date_Created": "n/a",
              "Department": "Engineering",
              "Name": "terraformtest-subnet1",
              "Purpose": "terraformtest-k8s"
            },
            "vpc_id": "vpc-00f9776004de3f728"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:098829378826:subnet/subnet-060d00b871d3ed178",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-060d00b871d3ed178",
            "map_public_ip_on_launch": true,
            "owner_id": "098829378826",
            "tags": {
              "Creator": "Stefan Papp",
              "Date_Created": "n/a",
              "Department": "Engineering",
              "Name": "terraformtest-subnet2",
              "Purpose": "terraformtest-k8s"
            },
            "vpc_id": "vpc-00f9776004de3f728"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:098829378826:subnet/subnet-044fbadcca46b938e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-044fbadcca46b938e",
            "map_public_ip_on_launch": true,
            "owner_id": "098829378826",
            "tags": {
              "Creator": "Stefan Papp",
              "Date_Created": "n/a",
              "Department": "Engineering",
              "Name": "terraformtest-subnet3",
              "Purpose": "terraformtest-k8s"
            },
            "vpc_id": "vpc-00f9776004de3f728"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:098829378826:vpc/vpc-00f9776004de3f728",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-075f89890da4b3df0",
            "default_route_table_id": "rtb-0a5c6276b88e5858a",
            "default_security_group_id": "sg-0d5c45c47fd9097c0",
            "dhcp_options_id": "dopt-931a22f8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00f9776004de3f728",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a5c6276b88e5858a",
            "owner_id": "098829378826",
            "tags": {
              "Creator": "Stefan Papp",
              "Date_Created": "n/a",
              "Department": "Engineering",
              "Name": "terraformtest-vpc",
              "Purpose": "terraformtest-k8s"
            }
          }
        }
      ]
    }
  ]
}